gitops/manifests/Archive/shlink-web/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    avp.kubernetes.io/path: "secret/data/shlink"
  labels:
    io.kompose.service: shlink-web
  name: shlink-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shlink-web
  strategy: {}
  template:
    metadata:
      annotations: {}
      labels:
        io.kompose.network/shlink-default: "true"
        io.kompose.service: shlink-web
        app.kubernetes.io/name: shlink-web
    spec:
      containers:
        - env:
            - name: SHLINK_SERVER_API_KEY
              value: <SHLINK_SERVER_API_KEY>
            - name: SHLINK_SERVER_URL
              value: https://<SHLINK_SERVER_URL>
          image: shlinkio/shlink-web-client
          name: shlink-web
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    io.kompose.service: shlink-web
  name: shlink-web
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: shlink-web
status:
  loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: shlink-web-ingress
  namespace: shlink
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`shlink-web.local.timmybtech.com`)
      kind: Rule
      services:
        - name: shlink-web
          port: 8080
  tls:
    secretName: local-timmybtech-com-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: shlink
spec:
  selector:
    matchLabels:
      app: cloudflared
  replicas: 2 # You could also consider elastic scaling for this deployment
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:2024.6.1
        args:
        - tunnel
        # Points cloudflared to the config file, which configures what
        # cloudflared will actually do. This file is created by a ConfigMap
        # below.
        - --config
        - /etc/cloudflared/config/config.yaml
        - run
        livenessProbe:
          httpGet:
            # Cloudflared has a /ready endpoint which returns 200 if and only if
            # it has an active connection to the edge.
            path: /ready
            port: 2000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /etc/cloudflared/config
          readOnly: true
        # Each tunnel has an associated "credentials file" which authorizes machines
        # to run the tunnel. cloudflared will read this file from its local filesystem,
        # and it'll be stored in a k8s secret.
        - name: creds
          mountPath: /etc/cloudflared/creds
          readOnly: true
      volumes:
      - name: creds
        secret:
          # By default, the credentials file will be created under ~/.cloudflared/<tunnel ID>.json
          # when you run `cloudflared tunnel create`. You can move it into a secret by using:
          # ```sh
          # kubectl create secret generic tunnel-credentials \
          # --from-file=credentials.json=/Users/yourusername/.cloudflared/<tunnel ID>.json
          # ```
          secretName: tunnel-credentials
      # Create a config.yaml file from the ConfigMap below.
      - name: config
        configMap:
          name: cloudflared
          items:
          - key: config.yaml
            path: config.yaml
